[package]
name = "memexec"
version = "0.2.0"
authors = ["iv4n <iv4n.cc@qq.com>"]
edition = "2018"
description = "A library for loading and executing PE (Portable Executable) from memory without ever touching the disk"
repository = "https://github.com/eddieivan01/memexec.git"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hook = []
